--- a/audio.html
+++ b/audio.html
@@ -331,7 +331,6 @@ function updateVelocities() {
         var now = new Date();
         socket.emit('masterSend', now.getTime());
         fileReader.readAsArrayBuffer(file);
-        emitPlay();
         console.log('sending data at this time ' + now + ' miliseconds ' + now.getMilliseconds());
     }, false);
 
@@ -346,15 +345,21 @@ function updateVelocities() {
 
 
 
-    //audio = new Audio();
-    //audio.initAudio(fileReader.result);
-    initSound(fileReader.result);
-    /*for (var i = 0; i < n; i++) {
-    resetParticle(i);
-    pl[i] = Math.floor(Math.random() * life);
+    audio = new Audio();
+    audio.initAudio(fileReader.result, sessionStorage.start);
+    context.decodeAudioData(fileReader.result, function(buffer) {
+      audioBuffer = buffer;
+      //playLocal();
+    }, function(e) {
+      console.log('Error decoding file', e);
+    });
+    //initSound(fileReader.result);
+    for (var i = 0; i < n; i++) {
+      resetParticle(i);
+      pl[i] = Math.floor(Math.random() * life);
     }
 
-  requestAnimationFrame(updateFrame);*/
+  requestAnimationFrame(updateFrame);
 
   };
 
@@ -368,8 +373,8 @@ function updateVelocities() {
   }
 
 function stopLocal() {
-  if (source) {
-    source.noteOff(0);
+  if (audio.source) {
+    audio.source.noteOff(0);
     sessionStorage.start = context.currentTime;
     shouldPlay = 0;
   }
@@ -377,16 +382,18 @@ function stopLocal() {
 
 function playLocal() {
   if(shouldPlay){
-    if (source) {
-      source.noteOff(0);
+    if (audio.source) {
+      audio.source.noteOff(0);
       sessionStorage.start = context.currentTime;
     }
-    source = context.createBufferSource();
+    /*source = context.createBufferSource();
     source.buffer = audioBuffer;
     source.loop = false;
     source.connect(context.destination);
     console.log(sessionStorage.start);
-    source.start(0, sessionStorage.start);
+    source.start(0, sessionStorage.start);*/
+    audio = new Audio();
+    audio.initAudio(fileReader.result, sessionStorage.start);
   }
 }
 
@@ -431,7 +438,6 @@ socket.on('masterTime', function (data){
 
 function emitPlay(){
   socket.emit('play', 'yes');
-  playLocal();
   // shouldPlay = 1;
 }
 
