--- a/audio.html
+++ b/audio.html
@@ -340,7 +340,7 @@ function updateVelocities() {
     initSound(fileReader.result);
     // Get more blobs when finished:
     isBufferReady = 1;
-    
+    shouldPlay = 0;
     //audio = new Audio();
     //audio.initAudio(fileReader.result, sessionStorage.start);
     /*for (var i = 0; i < n; i++) {
