--- a/audio.html
+++ b/audio.html
@@ -340,7 +340,6 @@ function updateVelocities() {
     initSound(fileReader.result);
     // Get more blobs when finished:
     isBufferReady = 1;
-    shouldPlay = 0;
     //audio = new Audio();
     //audio.initAudio(fileReader.result, sessionStorage.start);
     /*for (var i = 0; i < n; i++) {
@@ -362,14 +361,14 @@ function updateVelocities() {
 function stopLocal() {
   if (source) {
     source.noteOff(0);
-    sessionStorage.start = context.currentTime;
+    sessionStorage.start = context.currentTime - sessionStorage.start;
   }
 }
 
 function playLocal() {
   if(shouldPlay){
     if (source) {
-      sessionStorage.start = context.currentTime;
+      sessionStorage.start = context.currentTime - sessionStorage.strart;
       source.noteOff(0);
     }
     source = context.createBufferSource();
