--- a/audio.html
+++ b/audio.html
@@ -339,16 +339,16 @@ function updateVelocities() {
 
   fileReader.onloadend =  function(e){
     console.log("sound shoud be playing");
-    initSound(fileReader.result);
+    //initSound(fileReader.result);
     // Get more blobs when finished:
     isBufferReady = 1;
-    //audio = new Audio();
-    //audio.initAudio(fileReader.result, sessionStorage.start);
-    /*for (var i = 0; i < n; i++) {
+    audio = new Audio();
+    audio.initAudio(fileReader.result, sessionStorage.start);
+    for (var i = 0; i < n; i++) {
       resetParticle(i);
       pl[i] = Math.floor(Math.random() * life);
     }
-    requestAnimationFrame(updateFrame);*/
+    requestAnimationFrame(updateFrame);
   };
 
   function initSound(buf) {
