--- a/audio.html
+++ b/audio.html
@@ -287,7 +287,7 @@ function updateVelocities() {
 	client.on('stream', function(stream, meta){
       // Reset Variables
       if(audio.source){
-        audio.source.noteOff(0);
+        audio.source.disconnect();
       }
       source = null;
       audioBuffer = null;
@@ -339,8 +339,8 @@ function updateVelocities() {
   fileReader.onloadend =  function(e){
     initSound(fileReader.result);
     // Get more blobs when finished:
-    isBufferReady = 1;
     playLocal();
+    isBufferReady = 1;
     for (var i = 0; i < n; i++) {
       resetParticle(i);
       pl[i] = Math.floor(Math.random() * life);
@@ -354,20 +354,18 @@ function updateVelocities() {
 
 function stopLocal() {
   if (audio.source) {
-    audio.source.noteOff(0);
+    audio.source.disconnect();
     sessionStorage.start = context.currentTime;
   }
 }
 
 function playLocal() {
-  if (audio) {
-    if (audio.source) {
-      audio.source.disconnect();
-    }
+  if (audio.source) {
+    audio.source.disconnect();
   }
   audio.initAudio(audioBuffer);
   if(shouldPlay){
-    audio.source.start(0, sessionStorage.start);
+    audio.source.start(0);//, sessionStorage.start);
   }
 }
 
