--- a/audio.html
+++ b/audio.html
@@ -338,7 +338,6 @@ function updateVelocities() {
 
   fileReader.onloadend =  function(e){
     initSound(fileReader.result);
-    // Get more blobs when finished:
     playLocal();
     isBufferReady = 1;
     for (var i = 0; i < n; i++) {
@@ -365,7 +364,8 @@ function playLocal() {
   if (audio.source) {
     audio.source.disconnect();
   }
-  audio.initAudio(audioBuffer);
+  audio.source.buffer = audioBuffer;
+  audio.createAudio();
   if(shouldPlay){
     audio.source.start(0);//, sessionStorage.start);
   }
