updating audio init

--- a/audio.html
+++ b/audio.html
@@ -100,8 +100,8 @@
 
   <script>
 
-  
 
+  var audio = null;
   $( document ).ready(function() {
     sessionStorage.start = 0;
     audio = new Audio();
