--- a/audio.html
+++ b/audio.html
@@ -178,11 +178,11 @@
     //audio.initAudio(fileReader.result);
     // Get more blobs when finished:
     isBufferReady = 1;
-    for (var i = 0; i < n; i++) {
+    /*for (var i = 0; i < n; i++) {
       resetParticle(i);
       pl[i] = Math.floor(Math.random() * life);
     }
-    requestAnimationFrame(updateFrame);
+    requestAnimationFrame(updateFrame);*/
   };
 
   function initSound(buf) {
