--- a/audio.html
+++ b/audio.html
@@ -205,6 +205,7 @@ function playLocal() {
     source.disconnect();
   }
   source = context.createBufferSource();
+  source.connect(context.destination);
   source.loop = false;
   source.buffer = audioBuffer;
   if(shouldPlay){
