--- a/audio.html
+++ b/audio.html
@@ -139,7 +139,7 @@
     	});
     	stream.on('end', function(){
     		var now = new Date().getTime();
-    		console.log("time to fetch all data: " + (now-start.getTime()) + " ms");
+    		console.log("time to fetch all data: " + (now - startTime.getTime()) + " ms");
       	console.log("total buffers: " + streamData.length + " , total size: " + (size/1000000) + " mb");
     	});
 	});
