--- a/audio.html
+++ b/audio.html
@@ -240,6 +240,8 @@ socket.on('masterTime', function (data){
 });
 
 function emitPlay(){
+  shouldPlay = 1;
+  playLocal();
   socket.emit('play', 'yes');
 }
 
