--- a/audio.html
+++ b/audio.html
@@ -96,6 +96,7 @@
 
   $( document ).ready(function() {
     sessionStorage.start = 0;
+    sessionStorage.offset = 0;
   });
  	var context = new window.webkitAudioContext();
 	var source = null;
@@ -124,6 +125,7 @@
       audioBuffer = null;
       streamData = [];
       sessionStorage.start = 0;
+      sessionStorage.offset = 0;
 
       var startTime = new Date();
       socket.emit('slaveStartStreamSend', {"id" : socket.id, "time":startTime.getTime()});
@@ -188,21 +190,21 @@
 
 function stopLocal() {
   if (source) {
-    source.noteOff(0);
-    sessionStorage.start = context.currentTime;
+    source.stop();
+    sessionStorage.offset = context.currentTime - sessionStorage.start;
   }
 }
 
 function playLocal() {
-  if (source) {
-    source.noteOff(0);
-  }
+  sessionStorage.start = context.currentTime;
   source = context.createBufferSource();
-  source.connect(context.destination);
-  source.loop = false;
+  // Connect graph
   source.buffer = audioBuffer;
-  if(shouldPlay){
-    source.start(0);//, sessionStorage.start);
+  source.loop = true;
+  source.connect(context.destination);
+  // Start playback, but make sure we stay in bound of the buffer.
+  if (shouldPlay) {
+    source.start(0, sessionStorage.offset % source.buffer.duration);
   }
 }
 
